# terraform-fastapi-provider

./: .gitignore  .tool-versions  README.md
golang/: Makefile  des_decrpyt.go  des_encrypt.go  go.mod  provider.go
python/: app.py  pyproject.toml  requirements.txt  run.sh
python/routers/: encryption.py  rock.py
python/schemas/: encryption.py
terraform/: .terraform.lock.hcl  main.tf  run.sh  terraform.tfstate
terraform/.terraform/providers/terraform-example.com/garbage/garbage/0.0.1/: darwin_amd64
